--- a/package.json
+++ b/package.json
@@ -2,10 +2,22 @@
   "name": "lyrics-api",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon server.js"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/dcrawsh/open-lyrics-api.git"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/dcrawsh/open-lyrics-api/issues"
+  },
+  "homepage": "https://github.com/dcrawsh/open-lyrics-api#readme",
+  "dependencies": {
+    "nodemon": "^2.0.7"
+  }
 }
