--- a/package.json
+++ b/package.json
@@ -18,6 +18,11 @@
   },
   "homepage": "https://github.com/dcrawsh/open-lyrics-api#readme",
   "dependencies": {
+    "express": "^4.17.1",
+    "mongo": "^0.1.0",
+    "mongoose": "^5.11.15"
+  },
+  "devDependencies": {
     "nodemon": "^2.0.7"
   }
 }
